# tree-sitter-gap

./: .editorconfig  .gitignore  .versionrc  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  TODO_literals  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: not-dependabot.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-GAP.pc.in  tree-sitter-gap.h  tree-sitter-gap.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gap/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGap/: GAP.h
bindings/swift/TreeSitterGapTests/: TreeSitterGapTests.swift
corpus/: expressions.txt  literals.txt  statements.txt
etc/: extract_corpus.sh  extract_g.py  tst_to_g.py  version-updater.js  visualize_parse_tree.py
examples/: mini.gi  tst_to_g.py
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  comments_and_misc.txt  expressions.txt  literals.txt  precedence.txt  statements.txt
test/highlight/: keywords.g  mini.g
test/tags/: functions.g
