[package]
name = "tree-sitter-gap"
description = "gap grammar for the tree-sitter parsing library"
version = "0.3.0"
authors = ["Max Horn", "Reinis Cirpons <rc234@st-andrews.ac.uk>"]
keywords = ["incremental", "parsing", "gap", "gap-system"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/gap-system/tree-sitter-gap"
edition = "2021"
license = "MIT"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.21.0"

[build-dependencies]
cc = "1.0"
